made user comments visible; implemented minor fix in image profile styling

--- a/src/components/personalDataCard/personalDataCard.css
+++ b/src/components/personalDataCard/personalDataCard.css
@@ -11,6 +11,11 @@
     justify-content: center;
 }
 
+.image{
+    width: 150px;
+    height: 150px;
+}
+
 .file-field.input-field{
     display: flex;
     flex-direction: column;
